<resources>
    <string name="app_name">Calculator</string>
    <string name="x">x</string>
    <string name="addition">+</string>
    <string name="calculator">Calculator</string>
    <string name="division">/</string>
    <string name="enter_first_number">Enter first number</string>
    <string name="enter_second_number">Enter second number</string>
    <string name="subtraction">-</string>
</resources>